--- a/src/com/rohit/sdmp/home.fxml
+++ b/src/com/rohit/sdmp/home.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="rootPane" alignment="top_left" hgap="10" prefHeight="475.0" prefWidth="800.0" style="-fx-background-color: #262626;" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane fx:id="rootPane" alignment="top_left" hgap="10" prefHeight="475.0" prefWidth="800.0" style="-fx-background-color: #262626;" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rohit.sdmp.homeController">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
