--- a/src/com/rohit/sdmp/playlist.fxml
+++ b/src/com/rohit/sdmp/playlist.fxml
@@ -14,13 +14,14 @@
 <!--prefHeight="400.0" prefWidth="600.0">-->
 <!--</AnchorPane>-->
 
-<GridPane fx:id="playlistrootPane"  alignment="top_left" hgap="10" prefHeight="475.0" prefWidth="800.0" style="-fx-background-color: #262626;" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rohit.sdmp.playlistController">
+<GridPane fx:id="playlistrootPane" alignment="top_left" hgap="10" prefHeight="475.0" prefWidth="800.0" style="-fx-background-color: #262626;" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rohit.sdmp.playlistController">
     <columnConstraints>
         <ColumnConstraints />
     </columnConstraints>
     <rowConstraints>
         <RowConstraints />
         <RowConstraints />
+      <RowConstraints />
     </rowConstraints>
     <children>
         <Label prefHeight="49.0" prefWidth="800.0" text="Spotify Downloader Music Player" textFill="#ff5733">
@@ -32,37 +33,53 @@
             </GridPane.margin></Label>
         <GridPane GridPane.rowIndex="1">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="392.0" minWidth="10.0" prefWidth="234.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="558.0" minWidth="10.0" prefWidth="558.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="551.0" minWidth="9.0" prefWidth="9.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="232.0" minWidth="10.0" prefWidth="232.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="464.0" minWidth="10.0" prefWidth="240.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="367.0" minWidth="0.0" prefWidth="328.0" />
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Button mnemonicParsing="false" onAction="#homePressed" prefHeight="30.0" prefWidth="275.0" style="-fx-background-color: black;" text="Home" textFill="#f5f5f5">
+                <Button mnemonicParsing="false" onAction="#homePressed" prefHeight="30.0" prefWidth="232.0" style="-fx-background-color: black;" text="Home" textFill="#f5f5f5">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Button>
-                <Button mnemonicParsing="false" onAction="#playlistPressed" prefHeight="45.0" prefWidth="257.0" style="-fx-background-color: black;" text="Playlist" textFill="WHITE" GridPane.rowIndex="1">
+                <Button mnemonicParsing="false" onAction="#playlistPressed" prefHeight="30.0" prefWidth="232.0" style="-fx-background-color: black;" text="Playlist" textFill="WHITE" GridPane.rowIndex="1">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Button>
-                <Button mnemonicParsing="false" onAction="#settingsPressed"  prefHeight="47.0" prefWidth="257.0" style="-fx-background-color: black;" text="Settings" textFill="WHITE" GridPane.rowIndex="2">
+                <Button mnemonicParsing="false" onAction="#settingsPressed" prefHeight="30.0" prefWidth="232.0" style="-fx-background-color: black;" text="Settings" textFill="WHITE" GridPane.rowIndex="2">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Button>
-                <Button mnemonicParsing="false" onAction="#aboutPressed" prefHeight="51.0" prefWidth="257.0" style="-fx-background-color: black;" text="About" textFill="WHITE" GridPane.rowIndex="3">
+                <Button mnemonicParsing="false" onAction="#aboutPressed" prefHeight="30.0" prefWidth="232.0" style="-fx-background-color: black;" text="About" textFill="WHITE" GridPane.rowIndex="3">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Button>
+            <Label prefHeight="42.0" prefWidth="277.0" text="Choose music from system to play: " textFill="WHITE" GridPane.columnIndex="1">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <opaqueInsets>
+                  <Insets left="10.0" />
+               </opaqueInsets>
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </Label>
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="123.0" style="-fx-background-color: GREEN;" text="Choose" GridPane.columnIndex="2">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
             </children>
         </GridPane>
     </children>
