--- a/src/com/rohit/sdmp/playlist.fxml
+++ b/src/com/rohit/sdmp/playlist.fxml
@@ -75,7 +75,7 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="123.0" style="-fx-background-color: GREEN;" text="Choose" GridPane.columnIndex="2">
+            <Button onAction="#choosePressed" mnemonicParsing="false" prefHeight="25.0" prefWidth="123.0" style="-fx-background-color: GREEN;" text="Choose" GridPane.columnIndex="2">
                <font>
                   <Font size="14.0" />
                </font>
